crates/biome_html_parser/tests/html_specs/ok/svelte/attribute_interpolation.svelte
<div style="top: {top}px"></div>
<div class="card {cls}"></div>
<div class="{a} between {b}"></div>
<div data-x="{value}"></div>
<div title="no interpolation here"></div>
<div style='single {q} quotes'></div>
