crates/biome_html_parser/tests/html_specs/error/svelte/attribute_interpolation_unterminated.svelte
<div style="{"></div>
<div style="a {b"></div>
<div data-empty="{}"></div>
